--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@features/*": ["./src/features/*"],
+      "@pages/*": ["./src/features/pages/*"],
+      "@components/*": ["./src/features/components/*"],
+      "@utilities/*": ["./src/features/utilities/*"],
+      "@redux/*": ["./src/lib/redux/*"],
+      "localization": ["./src/features/localization/localization"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
