--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-use-websocket": "^4.13.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
