--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,22 +12,25 @@
     "@reduxjs/toolkit": "^2.8.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
-    "react": "^19.0.0",
+    "next": "14.2.30",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
-    "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-use-websocket": "^4.13.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "prettier": "3.6.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
