--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@ricky0123/vad-react": "^0.0.30",
+    "@wavesurfer/react": "^1.0.11",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "14.2.30",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "^9.2.0",
     "react-use-websocket": "^4.13.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "wavesurfer.js": "^7.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
